# team-event-picker

./: .dockerignore  .env  .env.tmpl  .gitignore  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.musl  README.md  commands.txt  docker-compose.yml
docs/: openapi.yml  usage.md
src/: config.rs  lib.rs  main.rs  slack.rs
src/assets/: add_event.json.hbs  add_event_form.json  add_event_success.json.hbs  delete_event.json.hbs  delete_select_event.json.hbs  edit_event.json.hbs  edit_event_success.json.hbs  edit_select_event.json.hbs  home.json.hbs  list_events.json.hbs  pick.json.hbs  pick_action.json.hbs  pick_auto.json.hbs  pick_select_event.json.hbs  repick.json.hbs  show_event.json.hbs  show_select_event.json.hbs
src/domain/: create_event.rs  delete_event.rs  delete_participants.rs  dtos.rs  entities.rs  find_all_channels.rs  find_all_events.rs  find_all_events_and_dates.rs  find_event.rs  insert_channel.rs  insert_participants.rs  insert_users.rs  mod.rs  pick_auto_participants.rs  pick_participant.rs  repick_participant.rs  save_auth.rs  timezone.rs  update_event.rs  update_participants.rs  verify_auth.rs
src/domain/auth/: authenticate.rs  jwt.rs  mod.rs  save_auth.rs  verify_auth.rs
src/domain/commands/: cancel_pick.rs  entities.rs  list_events.rs  mod.rs  pick_participant.rs  repick_participant.rs
src/domain/events/: cancel_pick.rs  count_events.rs  create_event.rs  delete_event.rs  delete_participants.rs  find_all_channels.rs  find_all_events.rs  find_all_events_and_dates.rs  find_event.rs  insert_users.rs  mod.rs  pick_auto_participants.rs  pick_participant.rs  repick_participant.rs  update_event.rs  update_participants.rs
src/domain/helpers/: mod.rs  participant.rs  pick.rs  pick_update.rs  team.rs
src/domain/mocks/: create_event.rs  entities.rs  find_all_events.rs  find_event.rs  mod.rs  update_event.rs  update_participants.rs
src/helpers/: date.rs
src/http/: hello_world.rs  mod.rs
src/repository/: auth.rs  errors.rs  event.rs  mod.rs
src/scheduler/: date.rs  entities.rs  executor.rs  helpers.rs  mod.rs
src/slack/: actions.rs  auth_guard.rs  commands.rs  common.rs  guard.rs  helpers.rs  mod.rs  oauth.rs  routes.rs  sender.rs  server.rs  state.rs  templates.rs
src/slack/api/: core.rs  mod.rs  routes.rs  search_channels.rs  search_events.rs
src/slack/client/: core.rs  get_channels.rs  get_users.rs  mod.rs
src/views/: cancel_pick.rs  entities.rs  list_events.rs  mod.rs  pick_participant.rs
