[package]
name = "team-event-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync", "tracing"] }
axum = { version = "0.6.4", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

# Axum builds on the types in Tower
tower = "0.4.11"
tower-http = { version = "0.3.5", features = ["trace"] }

clap = { version = "4.1.4", features = ["derive", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_trim = "0.4.0"
serde_urlencoded = "0.7.1"
bson = "2.5.0"
handlebars = "4.3.6"

# Database dependencies
mongodb = "2.3.1"

# Utility crates
anyhow = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
itertools = "0.10.5"
rand = "0.8.5"
async-trait = "0.1.64"
chrono = "0.4.23"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
futures = "0.3.27"
# console-subscriber = "0.1.8"
