[package]
name = "team-event-picker"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync", "tracing"] }
axum = { version = "0.6.20", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

# Axum builds on the types in Tower
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }

clap = { version = "4.5.7", features = ["derive", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_trim = "0.4.0"
serde_urlencoded = "0.7.1"
bson = "2.11.0"
handlebars = "4.5.0"

# Database dependencies
mongodb = "2.8.2"

# Utility crates
anyhow = "1.0.86"
dotenv = "0.15.0"
log = "0.4.21"
itertools = "0.10.5"
rand = "0.8.5"
async-trait = "0.1.80"
chrono = "0.4.38"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
futures = "0.3.30"
chrono-tz = "0.8.6"

# Slack dependencies
slack = "0.25.0"
slack-blocks = "0.25.0"
reqwest = "0.10.10"
slack_api = "0.23.1"
slack-rust = "0.0.1-alpha"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
